util/saved/startuppod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ububtu
spec:
  containers:
  - image: ubuntu
    name: ubuntu
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
