util/saved/backend-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
  namespace: mongo
spec:
  podSelector:
    matchLabels:
      role: backend222
  ingress: []
